# steering-vectors

./: .buildinfo  .coderabbit.yaml  .gitignore  CHANGELOG.md  LICENSE  README.md  about.html  advanced_usage.html  attn_head_jizz.ipynb  basic_usage.html  fuckaround.ipynb  genindex.html  helpful.csv  index.html  objects.inv  patching_fuckaround.ipynb  patching_helpers.py  play_with_llama copy.ipynb  play_with_llama.ipynb  play_with_logit_lens.ipynb  play_with_patching.ipynb  probing_blablabla.py  prototype.ipynb  pyproject.toml  search.html  searchindex.js  settings.json  setup.cfg
.doctrees/: about.doctree  advanced_usage.doctree  basic_usage.doctree  environment.pickle  index.doctree
.doctrees/api/: record_activations.doctree  steering_vector.doctree  train_steering_vector.doctree
.github/workflows/: ci.yaml
_modules/: index.html
_modules/steering_vectors/: record_activations.html  steering_vector.html  train_steering_vector.html
_sources/: about.rst.txt  advanced_usage.rst.txt  basic_usage.rst.txt
_sources/api/: steering_vector.rst.txt  train_steering_vector.rst.txt
aengus/: patching_fuckaround.ipynb
api/: record_activations.html  steering_vector.html  train_steering_vector.html
data/: TEMP2_toxic_prompts.jsonl  TEMP_toxic_prompts.jsonl  classifiers_persona1_coefficients.pkl  classifiers_persona2_coefficients.pkl  new_toxic_prompts.jsonl  new_toxic_prompts_labelled.jsonl  toxic_prompts.jsonl
docs/: about.rst  advanced_usage.rst  basic_usage.rst  conf.py  index.rst
docs/api/: record_activations.rst  train_steering_vector.rst
examples/: caa_sycophancy.ipynb  layer_config.ipynb  task_vectors.ipynb
examples/caa/: caa.ipynb
steering_vectors/: __init__.py  aggregators.py  layer_matching.py  record_activations.py  steering_operators.py  steering_vector.py  token_utils.py  torch_utils.py  train_steering_vector.py  utils.py
steering_vectors/core/: patterns.py
tests/: conftest.py  test_aggregators.py  test_layer_matching.py  test_record_activations.py  test_steering_operators.py  test_steering_vector.py  test_token_utils.py  test_torch_utils.py  test_train_steering_vector.py
tests/_original_caa/: helpers.py  llama_wrapper.py
tests/steering_vectors/: test_layer_matching.py  test_record_activations.py  test_steering_vector.py
